--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="container">
     <h1>Copilotte Artisanale</h1>
-    <p>Interface web autonome prête au décollage.</p>
+    <p class="intro">Interface web autonome prête au décollage.</p>
     <button onclick="lancerCopilotte()">Démarrer</button>
     <div id="status" aria-live="polite"></div>
   </main>
