--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <section id="console" class="tab-content">Copilotte core active.</section>
     <section id="canvas" class="tab-content hidden">Croquis interactif chargé.</section>
     <section id="image-gen" class="tab-content hidden">Générateur d’images prêt.</section>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
