--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <button class="tab-button" data-target="image-gen">🖼️ Générateur d’images</button>
     </nav>
     <section id="console" class="tab-content">Copilotte core active.</section>
-    <section id="canvas" class="tab-content hidden">Croquis interactif chargé.</section>
-    <section id="image-gen" class="tab-content hidden">Générateur d’images prêt.</section>
-    <script src="./script.js"></script>
+    <section id="canvas" class="tab-content">Croquis interactif chargé.</section>
+    <section id="image-gen" class="tab-content">Générateur d’images prêt.</section>
+    <script src="script.js"></script>
 </body>
 </html>
