--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
         <button class="tab-button" data-target="canvas">🖌️ Croquis</button>
         <button class="tab-button" data-target="image-gen">🖼️ Générateur d’images</button>
     </nav>
-    <section id="console" class="tab-content">Copilotte core active.</section>
-    <section id="canvas" class="tab-content">Croquis interactif chargé.</section>
-    <section id="image-gen" class="tab-content">Générateur d’images prêt.</section>
+
+    <section id="console" class="tab-content">
+        <h2>Console de Copilotte</h2>
+        <p>Copilotte core active. Bienvenue !</p>
+    </section>
+
+    <section id="canvas" class="tab-content">
+        <h2>Zone de Croquis (Mockup)</h2>
+        <p>Ici viendra ton éditeur canvas. Tu peux intégrer un `<canvas>` ou une lib comme Fabric.js.</p>
+        </section>
+
+    <section id="image-gen" class="tab-content">
+        <h2>Générateur d’images</h2>
+        <p>Clique sur l'onglet pour générer une image. (Ceci est une image de remplacement pour l'instant.)</p>
+        </section>
+
     <script src="script.js"></script>
 </body>
 </html>
